--- a/UWP.Communications/UWP.Communications.csproj
+++ b/UWP.Communications/UWP.Communications.csproj
@@ -123,6 +123,9 @@
     <Compile Include="ICommunication.cs" />
     <Compile Include="ICommunicationSetting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerialCommunication.cs" />
+    <Compile Include="SerialSetting.cs" />
+    <Compile Include="StateObject.cs" />
     <EmbeddedResource Include="Properties\UWP.Communications.rd.xml" />
   </ItemGroup>
   <ItemGroup>
