complete device commands

--- a/UWP.Communications/UWP.Communications.csproj
+++ b/UWP.Communications/UWP.Communications.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.19041.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -120,8 +120,13 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DeviceCommand\DeviceCommand.cs" />
+    <Compile Include="DeviceCommand\GetValueCommand.cs" />
+    <Compile Include="DeviceCommand\IDeviceCommand.cs" />
+    <Compile Include="DeviceCommand\SetValueCommand.cs" />
     <Compile Include="ICommunication.cs" />
     <Compile Include="ICommunicationSetting.cs" />
+    <Compile Include="NetSocket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialCommunication.cs" />
     <Compile Include="SerialSetting.cs" />
